--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exercicio",
   "version": "1.0.0",
+  "desciption": "",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
     "build": "parcel build src/index.html",
